// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-jXbUNg dNPpAp sc-dhKdcB hrwYWF r5-widget"
    transition="entering"
  >
    <div>
      <div
        class="sc-dAbbOL dAhtst"
      >
        <div>
          <div
            class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
          >
            mfa.email.explain
          </div>
          <form
            class="sc-gFqAkR lmligY"
            novalidate=""
          >
            <button
              class="sc-fPXMVe dsmqYT"
              data-testid="submit"
              type="submit"
            >
              mfa.register.email
            </button>
          </form>
        </div>
        <div
          class="sc-gsFSXq cvkYjx"
        >
          <span>
            or
          </span>
        </div>
        <div>
          <div
            class="sc-gEvEer sc-eqUAAy bEpsus iRHKeq"
          >
            mfa.phoneNumber.explain
          </div>
          <form
            class="sc-gFqAkR lmligY"
            novalidate=""
          >
            <div
              class="sc-cwHptR hcXvLx"
              required=""
            >
              <label
                class="sc-dAlyuH ckDxcO"
                for="phone_number"
              >
                phoneNumber
              </label>
              <input
                autocomplete="tel"
                class="sc-jEACwC cqJTew"
                data-testid="phone_number"
                id="phone_number"
                labels="[object Object]"
                name="phone_number"
                placeholder="phoneNumber"
                required=""
                type="tel"
                value=""
              />
            </div>
            <button
              class="sc-fPXMVe dsmqYT"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-dAbbOL dAhtst"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-jXbUNg dNPpAp sc-dhKdcB hrwYWF r5-widget"
    transition="entering"
  >
    <div>
      <div
        class="sc-dAbbOL dAhtst"
      />
      <div
        class="sc-dAbbOL dAhtst"
      >
        <div>
          <form
            class="sc-gFqAkR lmligY"
            novalidate=""
          >
            <button
              class="sc-fPXMVe dsmqYT"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.email
            </button>
          </form>
        </div>
        <div
          class="sc-gsFSXq cvkYjx"
        >
          <span>
            or
          </span>
        </div>
        <div>
          <form
            class="sc-gFqAkR lmligY"
            novalidate=""
          >
            <button
              class="sc-fPXMVe dsmqYT"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.phoneNumber
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
